--- a/Little Fashion Free Website Template - Free-CSS.com/2127_little_fashion/index.html
+++ b/Little Fashion Free Website Template - Free-CSS.com/2127_little_fashion/index.html
@@ -48,7 +48,7 @@ https://www.tooplate.com/view/2127-little-fashion
                     </button>
 
                     <a class="navbar-brand" href="index.html">
-                        <strong><span>Little</span> Fashion</strong>
+                        <strong><span>R&W</span>SEAFOOD</strong>
                     </a>
 
                     <div class="d-lg-none">
@@ -64,11 +64,11 @@ https://www.tooplate.com/view/2127-little-fashion
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="about.html">Story</a>
+                                <a class="nav-link" href="about.html"> Over ons</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="products.html">Products</a>
+                                <a class="nav-link" href="products.html">Producten</a>
                             </li>
 
                             <li class="nav-item">
