--- a/Little Fashion Free Website Template - Free-CSS.com/2127_little_fashion/index.html
+++ b/Little Fashion Free Website Template - Free-CSS.com/2127_little_fashion/index.html
@@ -91,15 +91,15 @@ https://www.tooplate.com/view/2127-little-fashion
 
             <section class="slick-slideshow">   
                 <div class="slick-custom">
-                    <img src="images/slideshow/medium-shot-business-women-high-five.jpeg" class="img-fluid" alt="">
+                    <img src="images/slideshow/field2.jpeg" class="img-fluid" alt="">
 
                     <div class="slick-bottom">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-6 col-10">
-                                    <h1 class="slick-title">Cool Fashion</h1>
+                                    <h1 class="slick-title">Zilte Schoonheid</h1>
 
-                                    <p class="lead text-white mt-lg-3 mb-lg-5">Little fashion template comes with total 8 HTML pages provided by Tooplate website.</p>
+                                    <p class="lead text-white mt-lg-3 mb-lg-5">Geniet van onze zeekraal, die op duurzame wijze wordt verbouwd.</p>
 
                                     <a href="about.html" class="btn custom-btn">Learn more about us</a>
                                 </div>
@@ -109,15 +109,15 @@ https://www.tooplate.com/view/2127-little-fashion
                 </div>
 
                 <div class="slick-custom">
-                    <img src="images/slideshow/team-meeting-renewable-energy-project.jpeg" class="img-fluid" alt="">
+                    <img src="images/slideshow/bakjesedit.jpg" class="img-fluid" alt="">
 
                     <div class="slick-bottom">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-6 col-10">
-                                    <h1 class="slick-title">New Design</h1>
+                                    <h1 class="slick-title">Onze producten</h1>
 
-                                    <p class="lead text-white mt-lg-3 mb-lg-5">Please share this Little Fashion template to your friends. Thank you for supporting us.</p>
+                                    <p class="lead text-white mt-lg-3 mb-lg-5">Vers van het land, direct op het bord.</p>
 
                                     <a href="product.html" class="btn custom-btn">Explore products</a>
                                 </div>
@@ -127,13 +127,13 @@ https://www.tooplate.com/view/2127-little-fashion
                 </div>
 
                 <div class="slick-custom">
-                    <img src="images/slideshow/two-business-partners-working-together-office-computer.jpeg" class="img-fluid" alt="">
+                    <img src="images/slideshow/recipe.jpeg" class="img-fluid" alt="">
 
                     <div class="slick-bottom">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-6 col-10">
-                                    <h1 class="slick-title">Talk to us</h1>
+                                    <h1 class="slick-title">Recipes</h1>
 
                                     <p class="lead text-white mt-lg-3 mb-lg-5">Tooplate is one of the best HTML CSS template websites for everyone.</p>
 
