Change home page

--- a/Little Fashion Free Website Template - Free-CSS.com/2127_little_fashion/index.html
+++ b/Little Fashion Free Website Template - Free-CSS.com/2127_little_fashion/index.html
@@ -101,7 +101,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
                                     <p class="lead text-white mt-lg-3 mb-lg-5">Geniet van onze zeekraal, die op duurzame wijze wordt verbouwd.</p>
 
-                                    <a href="about.html" class="btn custom-btn">Learn more about us</a>
+                                    <a href="about.html" class="btn custom-btn">Over ons</a>
                                 </div>
                             </div>
                         </div>
@@ -119,7 +119,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
                                     <p class="lead text-white mt-lg-3 mb-lg-5">Vers van het land, direct op het bord.</p>
 
-                                    <a href="product.html" class="btn custom-btn">Explore products</a>
+                                    <a href="product.html" class="btn custom-btn">bekijk onze producten</a>
                                 </div>
                             </div>
                         </div>
@@ -133,11 +133,11 @@ https://www.tooplate.com/view/2127-little-fashion
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-6 col-10">
-                                    <h1 class="slick-title">Recipes</h1>
+                                    <h1 class="slick-title">De smaak van de zee</h1>
 
-                                    <p class="lead text-white mt-lg-3 mb-lg-5">Tooplate is one of the best HTML CSS template websites for everyone.</p>
+                                    <p class="lead text-white mt-lg-3 mb-lg-5">Maak de lekkerste recepten</p>
 
-                                    <a href="contact.html" class="btn custom-btn">Work with us</a>
+                                    <a href="contact.html" class="btn custom-btn">Meer recepten</a>
                                 </div>
                             </div>
                         </div>
@@ -151,7 +151,7 @@ https://www.tooplate.com/view/2127-little-fashion
                     <div class="row">
 
                         <div class="col-12 text-center">
-                            <h2 class="mb-5">Get started with <span>Little</span> Fashion</h2>
+                            <h2 class="mb-5">De lekkerste zeegroente uit <span>Zeeland</span></h2>
                         </div>
 
                         <div class="col-lg-2 col-12 mt-auto mb-auto">
@@ -176,20 +176,19 @@ https://www.tooplate.com/view/2127-little-fashion
 
                                     <div class="row">
                                         <div class="col-lg-7 col-12">
-                                            <img src="images/pim-chu-z6NZ76_UTDI-unsplash.jpeg" class="img-fluid" alt="">
+                                            <img src="images/slideshow/owners.jpg" class="img-fluid" alt="">
                                         </div>
 
                                         <div class="col-lg-5 col-12">
                                             <div class="d-flex flex-column h-100 ms-lg-4 mt-lg-0 mt-5">
-                                                <h4 class="mb-3">Good <span>Design</span> <br>Ideas for <span>your</span> fashion</h4>
+                                                <h4 class="mb-3">Over ons&nbsp;</h4>
 
-                                                <p>Little Fashion templates comes with <a href="sign-in.html">sign in</a> / <a href="sign-up.html">sign up</a> pages, product listing / product detail, about, FAQs, and contact page.</p>
+                                                <p>Welkom bij R&W SeaFood! Wij zijn Wouter en Rein, twee enthousiaste jongens met een passie voor zilte groenten. WIj zijn gevestigd in het prachtige Zeeland, waar wij gespecialiseerd zijn in het verbouwen van zeekraal en lamsoor.</p>
 
-                                                <p>Since this HTML template is based on Boostrap 5 CSS library, you can feel free to add more components as you need.</p>
 
                                                 <div class="mt-2 mt-lg-auto">
                                                     <a href="about.html" class="custom-link mb-2">
-                                                        Learn more about us
+                                                        Leer meer over ons
                                                         <i class="bi-arrow-right ms-2"></i>
                                                     </a>
                                                 </div>
