--- a/Little Fashion Free Website Template - Free-CSS.com/2127_little_fashion/index.html
+++ b/Little Fashion Free Website Template - Free-CSS.com/2127_little_fashion/index.html
@@ -157,15 +157,15 @@ https://www.tooplate.com/view/2127-little-fashion
                         <div class="col-lg-2 col-12 mt-auto mb-auto">
                             <ul class="nav nav-pills mb-5 mx-auto justify-content-center align-items-center" id="pills-tab" role="tablist">
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Introduction</button>
+                                    <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Introductie</button>
                                 </li>
 
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-youtube-tab" data-bs-toggle="pill" data-bs-target="#pills-youtube" type="button" role="tab" aria-controls="pills-youtube" aria-selected="true">How we work?</button>
+                                    <button class="nav-link" id="pills-youtube-tab" data-bs-toggle="pill" data-bs-target="#pills-youtube" type="button" role="tab" aria-controls="pills-youtube" aria-selected="true">Werkwijze</button>
                                 </li>
 
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-skill-tab" data-bs-toggle="pill" data-bs-target="#pills-skill" type="button" role="tab" aria-controls="pills-skill" aria-selected="false">Capabilites</button>
+                                    <button class="nav-link" id="pills-skill-tab" data-bs-toggle="pill" data-bs-target="#pills-skill" type="button" role="tab" aria-controls="pills-skill" aria-selected="false">Interesse?</button>
                                 </li>
                             </ul>
                         </div>
@@ -183,7 +183,10 @@ https://www.tooplate.com/view/2127-little-fashion
                                             <div class="d-flex flex-column h-100 ms-lg-4 mt-lg-0 mt-5">
                                                 <h4 class="mb-3">Over ons&nbsp;</h4>
 
-                                                <p>Welkom bij R&W SeaFood! Wij zijn Wouter en Rein, twee enthousiaste jongens met een passie voor zilte groenten. WIj zijn gevestigd in het prachtige Zeeland, waar wij gespecialiseerd zijn in het verbouwen van zeekraal en lamsoor.</p>
+                                                <p>Welkom bij R&W SeaFood! Wij zijn Wouter en Rein, twee enthousiaste jongens met een passie voor zilte groenten. Wij zijn gevestigd in het prachtige Zeeland, waar wij gespecialiseerd zijn in het verbouwen van zeekraal en lamsoor.</p>
+												
+												<h4 class="mb-3">Missie&nbsp;</h4>
+												<p>Onze missie is simpel: we willen de puurste, meest smaakvolle zilte groenten leveren aan onze klanten. Met respect voor de natuur en duurzame landbouwpraktijken telen we onze gewassen zonder enige bestrijdingsmiddelen. Zo kunnen we de unieke smaak en voedingswaarde van zeekraal en lamsoor behouden. </p>
 
 
                                                 <div class="mt-2 mt-lg-auto">
@@ -208,15 +211,15 @@ https://www.tooplate.com/view/2127-little-fashion
 
                                         <div class="col-lg-5 col-12">
                                             <div class="d-flex flex-column h-100 ms-lg-4 mt-lg-0 mt-5">
-                                                <h4 class="mb-3">Life at Studio</h4>
+                                                <h4 class="mb-3">Werkwijze</h4>
 
-                                                <p>Over three years in business, We’ve had the chance to work on a variety of projects, with companies</p>
+                                                <p>Om een beeld te geven van onze milieuvriendelijke werkwijze laten we in deze video zien hoe wij werken met onze zee groente. </p>
 
-                                                <p>Custom work is branding, web design, UI/UX design</p>
+                                                <p>Het belangrijkste is dat je veel aandacht en tijd besteed aan het gewas</p>
 
                                                 <div class="mt-2 mt-lg-auto">
                                                     <a href="contact.html" class="custom-link mb-2">
-                                                        Work with us
+                                                        Zie het process
                                                         <i class="bi-arrow-right ms-2"></i>
                                                     </a>
                                                 </div>
