--- a/Little Fashion Free Website Template - Free-CSS.com/2127_little_fashion/index.html
+++ b/Little Fashion Free Website Template - Free-CSS.com/2127_little_fashion/index.html
@@ -244,7 +244,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                                 
                                                 <div class="mt-2 mt-lg-auto">
                                                     <a href="products.html" class="custom-link mb-2">
-                                                        Explore products
+                                                        contacteer ons
                                                         <i class="bi-arrow-right ms-2"></i>
                                                     </a>
                                                 </div>
